--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -73,7 +73,8 @@ spec:
       MSDEPLOY_RENAME_LOCKED_FILES: "1"
       ReformEmail: "hearings.reform.hmcts.net"
       SnapshotDebugger_EXTENSION_VERSION: "disabled"
-      TestDefaultPassword: "<azure-secret:testdefaultpassword>"
+      TestDefaultPassword: <azure-secret:testdefaultpassword>
+      Testing__ExistingEmail: "UserApiTestUser@a.com"
       Testing__ExistingGroups__0__Displayname: "External"
       Testing__ExistingGroups__0__GroupId: "121fa058-1796-4531-a9ee-63be1d4dc630"
       Testing__ExistingGroups__1__Displayname: "UserApiTestGroup"
