--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -57,14 +57,14 @@ spec:
       AdGroup__ProfessionalUser: "VirtualRoomProfessionalUser"
       APPINSIGHTS_PROFILERFEATURE_VERSION: "disabled"
       APPINSIGHTS_SNAPSHOTFEATURE_VERSION: "disabled"
-      ApplicationInsights_InstrumentationKey: <azure-secret:vh-infra-core-AppInsightsKey>
-      APPLICATIONINSIGHTS_CONNECTION_STRING: <InstrumentationKey=<azure-secret:vh-infra-core-AppInsightsKey>
+      ApplicationInsights_InstrumentationKey: "<azure-secret:vh-infra-core-AppInsightsKey>"
+      APPLICATIONINSIGHTS_CONNECTION_STRING: "<InstrumentationKey=<azure-secret:vh-infra-core-AppInsightsKey>"
       ApplicationInsightsAgent_EXTENSION_VERSION: "~2"
       AzureAd__ClientSecret: <azure-secret:vh-user-api-key>
       AzureAd__ClientId: <azure-secret:vh-user-api-appid>
       AzureAd__TenantId: <azure-secret:TenantId>
       AzureAd__VhUserApiResourceId: <azure-secret:vh-user-api-identifieruris>
-      ConnectionStrings__RedisCache: <azure-secret:redis-connection-str>
+      ConnectionStrings__RedisCache: "<azure-secret:redis-connection-str>"
       DefaultPassword: <azure-secret:defaultpassword>
       DiagnosticServices_EXTENSION_VERSION: "disabled"
       DisableHttpsRedirection: "true"
