fixing double quote issue

--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -68,7 +68,7 @@ spec:
       AzureAd__TenantId: <azure-secret:TenantId>
       AzureAd__VhUserApiResourceId: <azure-secret:vh-user-api-identifieruris>
       ConnectionStrings__RedisCache: "<azure-secret:redis-connection-str>"
-      DefaultPassword: "<azure-secret:defaultpassword>""
+      DefaultPassword: "<azure-secret:defaultpassword>"
       DiagnosticServices_EXTENSION_VERSION: "disabled"
       DisableHttpsRedirection: "true"
       InstrumentationEngine_EXTENSION_VERSION: "disabled"
