--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -57,13 +57,13 @@ spec:
             - name: "ApplicationInsightsAgent_EXTENSION_VERSION"
               value: {{ .Values.env.ApplicationInsightsAgent_EXTENSION_VERSION | quote }}
             - name: "AzureAd__ClientSecret"
-              value: {{ .Values.env.AzureAd_ClientSecret | quote }}
+              value: {{ .Values.env.AzureAd__ClientSecret | quote }}
             - name: "AzureAd__ClientId"
               value: {{ .Values.env.AzureAd__ClientId | quote }}
             - name: "AzureAd__TenantId"
               value: {{ .Values.env.AzureAd__TenantId | quote }}
             - name: "AzureAd__VhUserApiResourceId"
-              value: {{ .Values.env.AzureAd_VhUserApiResourceId | quote }}
+              value: {{ .Values.env.AzureAd__VhUserApiResourceId | quote }}
             - name: "ConnectionStrings__RedisCache"
               value: {{ .Values.env.ConnectionStrings__RedisCache | quote }}
             - name: "DefaultPassword"
