--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -11,6 +11,9 @@ metadata:
     helm.sh/chart: {{ include "vh-user-api.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name}}
     app.kubernetes.io/managed-by: {{ .Release.Service}}
+    {{- if .Values.aadIdentityName }}
+    aadpodidbinding: {{ .Values.aadIdentityName }}
+    {{- end }}
 spec:
   replicas: {{ .Values.replicas}}
   selector:
@@ -24,7 +27,11 @@ spec:
        {{- include "vh-user-api.selectorLabels" . | nindent 8}}
         app.kubernetes.io/name: {{ include "vh-user-api.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name}}
+        {{- if .Values.aadIdentityName }}
+        aadpodidbinding: {{ .Values.aadIdentityName }}
+        {{- end }}
     spec:
+      {{- $aadIdentityName := .Values.aadIdentityName }}
       containers:
         - name: {{ .Chart.Name}}
           image: "{{ $imagerepo }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
