--- a/k8s/environments/prod/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/prod/cluster-01-overlay/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 # - ../../../release/admin/kube-slack
-# - ../../../release/admin/traefik
-# - ../../../release/admin/kured
+- ../../../release/admin/traefik
+- ../../../release/admin/kured
 - ../../../release/admin/secrets-csi-driver
 - ../../../namespaces/azure-devops
 - ../../../namespaces/admin/aad-pod-identity
@@ -17,10 +17,10 @@ patchesStrategicMerge:
 # - ../../../release/admin/kube-slack/patches/prod/cluster-01/kube-slack.yaml
 
 #traefik patch
-# - ../../../release/admin/traefik/patches/prod/cluster-01/traefik.yaml
+- ../../../release/admin/traefik/patches/prod/cluster-01/traefik.yaml
 
 #kured patch
-# - ../../../release/admin/kured/patches/prod/cluster-01/kured.yaml
+- ../../../release/admin/kured/patches/prod/cluster-01/kured.yaml
 
 #azure-devops-agent patch
 - ../../../namespaces/azure-devops/azure-devops-agent/patches/prod/cluster-00/azure-devops-agent.yaml
