--- a/k8s/release/admin/traefik/patches/prod/cluster-01/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/prod/cluster-01/traefik.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     loadBalancerIP: 10.144.31.250
     dashboard:
-      domain: traefik-ss-01.prod.platform.hmcts.net
+      domain: traefik-ss-01.platform.hmcts.net
     accessLogs:
       enabled: true
     autoscaling:
