--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
@@ -97,14 +97,14 @@ spec:
           MI_CLIENT_ID: ee31a18f-45e9-41db-881d-5976695188fb
           APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
           DATA_SOURCE_CCD: true
-          DATA_SOURCE_NOTIFY: false
-          DATA_SOURCE_EIGHTBYEIGHT: false
-          DATA_SOURCE_PAYMENT: false
-          GOV_UK_NOTIFY_ENABLED_CMC: false
-          GOV_UK_NOTIFY_ENABLED_DIVORCE: false
-          GOV_UK_NOTIFY_ENABLED_IDAM: false
-          GOV_UK_NOTIFY_ENABLED_PROBATE: false
-          GOV_UK_NOTIFY_ENABLED_SSCS: false
+          DATA_SOURCE_NOTIFY: true
+          DATA_SOURCE_EIGHTBYEIGHT: true
+          DATA_SOURCE_PAYMENT: true
+          GOV_UK_NOTIFY_ENABLED_CMC: true
+          GOV_UK_NOTIFY_ENABLED_DIVORCE: true
+          GOV_UK_NOTIFY_ENABLED_IDAM: true
+          GOV_UK_NOTIFY_ENABLED_PROBATE: true
+          GOV_UK_NOTIFY_ENABLED_SSCS: true
     global:
       subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
