--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
@@ -64,6 +64,7 @@ spec:
         GOV_UK_NOTIFY_ENABLED_PROBATE: true
         GOV_UK_NOTIFY_ENABLED_SSCS: true
         MI_VALIDATE_ALL_LANDING_BLOBS: true
+        MI_EIGHTBYEIGHT_EXTRACTION_FROM_DATE: 2021-01-19
       smoketests:
         image: ssprivateprod.azurecr.io/mi-integration-service:prod-0c90d42
         enabled: true
