--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
@@ -105,6 +105,7 @@ spec:
           GOV_UK_NOTIFY_ENABLED_IDAM: true
           GOV_UK_NOTIFY_ENABLED_PROBATE: true
           GOV_UK_NOTIFY_ENABLED_SSCS: true
+          DUMMY: dummy
     global:
       subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
