--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -31,6 +31,7 @@ spec:
       tls: []
       hosts:
         - 'vh-user-api.dev.platform.hmcts.net'
+    aadIdentityName: "vh-infra-core-dev-kvuser"
     readinessProbe:
       enabled: false
     livenessProbe:
