--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -53,7 +53,7 @@ spec:
             - name: "APPINSIGHTS_SNAPSHOTFEATURE_VERSION"
               value: {{ .Values.env.APPINSIGHTS_SNAPSHOTFEATURE_VERSION | quote }}
             - name: "ApplicationInsights_InstrumentationKey"
-              value: {{ .Values.env.ApplicationInsights_InstrumentationKey | quote }}
+              value: {{ .Values.env.ApplicationInsights_InstrumentationKey }}
             - name: "APPLICATIONINSIGHTS_CONNECTION_STRING"
               value: {{ .Values.env.APPLICATIONINSIGHTS_CONNECTION_STRING | quote }}
             - name: "ApplicationInsightsAgent_EXTENSION_VERSION"
