--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -3,92 +3,14 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: vh-user-api
-  namespace: vh
-  annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.chart-image: master-*
 spec:
   releaseName: vh-user-api
   chart:
-    git: git@github.com:hmcts/shared-services-flux
-    path: k8s/release/vh/vh-user-api
+    git: git@github.com:hmcts/vh-user-api
+    path: charts/vh-user-api
     ref: master
   values:
-    replicas: 2
-    image:
-      repository: sdshmctspublic.azurecr.io/vh/vh-user-api
-      tag: "v0.2"
-      pullPolicy: Always
-    service:
-      type: ClusterIP
-      port: 80
-    ingress:
-      enabled: true
-      annotations:
-        kubernetes.io/ingress.class: traefik
-      paths:
-        - /
-      tls: []
-      hosts:
-        - 'vh-user-api.dev.platform.hmcts.net'
-    readinessProbe:
-      enabled: false
-    livenessProbe:
-      enabled: false
-    keyvaults:
-      - name: vhinfracorehtdev
-        resourcegroup: vh-infra-core-dev
-        subscriptionid: 867a878b-cb68-4de5-9741-361ac9e178b6
-        tenantid: 531ff96d-0ae9-462a-8d2d-bec7c0b42082
-        secrets:
-          - TenantId
-          - vh-user-api-key
-          - vh-user-api-appid
-          - vh-user-api-identifieruris
-          - vh-infra-core-AppInsightsKey
-          - defaultpassword
-          - redis-connection-str
-          - testdefaultpassword
-    env:
-      AdGroup__Administrator: "VirtualRoomAdministrator"
-      AdGroup__CaseType: "CaseType"
-      AdGroup__External: "External"
-      AdGroup__Judge: "VirtualRoomJudge"
-      AdGroup__JudgesTestGroup: "TestAccount"
-      AdGroup__ProfessionalUser: "VirtualRoomProfessionalUser"
-      APPINSIGHTS_PROFILERFEATURE_VERSION: "disabled"
-      APPINSIGHTS_SNAPSHOTFEATURE_VERSION: "disabled"
-      ApplicationInsights_InstrumentationKey: <azure-secret:vh-infra-core-AppInsightsKey>
-      APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=<azure-secret:vh-infra-core-AppInsightsKey>"
-      ApplicationInsightsAgent_EXTENSION_VERSION: "~2"
-      AzureAd__ClientSecret: "<azure-secret:vh-user-api-key>"
-      AzureAd__ClientId: "<azure-secret:vh-user-api-appid>"
-      AzureAd__TenantId: "<azure-secret:TenantId>"
-      AzureAd__VhUserApiResourceId: "<azure-secret:vh-user-api-identifieruris>"
-      ConnectionStrings__RedisCache: "<azure-secret:redis-connection-str>"
-      DefaultPassword: "<azure-secret:defaultpassword>"
-      DiagnosticServices_EXTENSION_VERSION: "disabled"
-      DisableHttpsRedirection: "true"
-      InstrumentationEngine_EXTENSION_VERSION: "disabled"
-      IsLive: "False"
-      MSDEPLOY_RENAME_LOCKED_FILES: "1"
-      ReformEmail: "hearings.reform.hmcts.net"
-      SnapshotDebugger_EXTENSION_VERSION: "disabled"
-      TestDefaultPassword: "<azure-secret:testdefaultpassword>"
-      Testing__ExistingEmail: "UserApiTestUser@a.com"
-      Testing__ExistingGroups__0__Displayname: "External"
-      Testing__ExistingGroups__0__GroupId: "121fa058-1796-4531-a9ee-63be1d4dc630"
-      Testing__ExistingGroups__1__Displayname: "UserApiTestGroup"
-      Testing__ExistingGroups__1__GroupId: "371ac75b-22b1-48d8-a3d8-f0587604d01f"
-      Testing__ExistingUserDisplayname: "User Api Test User"
-      Testing__ExistingUserFirstname: "User"
-      Testing__ExistingUserId: "948cb183-00cf-4251-8b13-6c39a1b0c25d"
-      Testing__ExistingUserLastname: "Api"
-      Testing__ExistingUserPrincipal: "UserApiTestUser@hearings.reform.hmcts.net"
-      Testing__NewGroups__0__Displayname: "NewUserApiTestGroup"
-      Testing__NewGroups__0__GroupId: "7d62cf17-c548-4a69-8f8f-4bc7fee90fbe"
-      VhServices__UserApiResourceId: "https://vh-user-api-dev.azurewebsites.net"
-      VhServices__UserApiUrl: "https://vh-user-api-dev-staging.azurewebsites.net/"
-      XDT_MicrosoftApplicationInsights_BaseExtensions: "disabled"
-      XDT_MicrosoftApplicationInsights_Mode: "default"
-      ZapConfiguration__BuildConfigMode: "Release"
+    java:
+      replicas: 2
+      useInterpodAntiAffinity: true
+      image: sdshmctspublic.azurecr.io/vh/vh-user-api:latest
