changing branch for testing

--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     git: git@github.com:hmcts/vh-user-api
     path: charts/vh-user-api
-    ref: master
+    ref: helm_chart_setup
   values:
     java:
       replicas: 2
