--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -13,6 +13,6 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: sdshmctspublic.azurecr.io/vh/vh-user-api:latest
+      image: sdshmctspublic.azurecr.io/vh/vh-user-api:v0.2
     global:
       environment: "dev"
