--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -16,3 +16,4 @@ spec:
       image: sdshmctspublic.azurecr.io/vh/vh-user-api:latest
     global:
       environment: "dev"
+      enableKeyVaults: true
