--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -12,7 +12,7 @@ spec:
   values:
     java:
       replicas: 2
-      useInterpodAntiAffinity: true
+      useInterpodAntiAffinity: false
       image: sdshmctspublic.azurecr.io/vh/vh-user-api:latest
     global:
       environment: "dev"
