Mi prod phase 3 release (#564)
* Enable MI Phase 3 Ingestion Sources

* Add Historical Notify Ingestion Job

* Revert "Add Historical Notify Ingestion Job"

This reverts commit ce8c22e09d67ac3b2112d2870d662789c8038f3d.

* Add start date for 8x8 extraction as we will ingest the historical separately

* set sftp server enabled

* Fix sftp path and enable encryption

Co-authored-by: qzhou <qiang.zhou@hmcts.net>

--- a/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-integration-service.yaml
@@ -55,15 +55,16 @@ spec:
         MI_CLIENT_ID: ee31a18f-45e9-41db-881d-5976695188fb
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         DATA_SOURCE_CCD: true
-        DATA_SOURCE_NOTIFY: false
-        DATA_SOURCE_EIGHTBYEIGHT: false
-        DATA_SOURCE_PAYMENT: false
-        GOV_UK_NOTIFY_ENABLED_CMC: false
-        GOV_UK_NOTIFY_ENABLED_DIVORCE: false
-        GOV_UK_NOTIFY_ENABLED_IDAM: false
-        GOV_UK_NOTIFY_ENABLED_PROBATE: false
-        GOV_UK_NOTIFY_ENABLED_SSCS: false
+        DATA_SOURCE_NOTIFY: true
+        DATA_SOURCE_EIGHTBYEIGHT: true
+        DATA_SOURCE_PAYMENT: true
+        GOV_UK_NOTIFY_ENABLED_CMC: true
+        GOV_UK_NOTIFY_ENABLED_DIVORCE: true
+        GOV_UK_NOTIFY_ENABLED_IDAM: true
+        GOV_UK_NOTIFY_ENABLED_PROBATE: true
+        GOV_UK_NOTIFY_ENABLED_SSCS: true
         MI_VALIDATE_ALL_LANDING_BLOBS: true
+        MI_EIGHTBYEIGHT_EXTRACTION_FROM_DATE: 2021-01-19
       smoketests:
         image: ssprivateprod.azurecr.io/mi-integration-service:prod-51aa146
         enabled: true
