--- a/k8s/environments/prod/cluster-00/mi/mi-extraction-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-extraction-service.yaml
@@ -38,11 +38,12 @@ spec:
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         MI_CLIENT_ID: e8a52cff-ef0c-4447-baf2-665c3480d0de
-        SFTP_ENABLED: false
+        SFTP_ENABLED: true
         SFTP_FORCECHECK: true
+        SFTP_FILE_ENCRYPTION_ENABLED: true
         SFTP_REMOTE_HOST: 10.24.254.130
         SFTP_REMOTE_PORT: 22
-        SFTP_REMOTE_FOLDER: files/mi-platform-export/
+        SFTP_REMOTE_FOLDER: /files/mi-platform-export/
       smoketests:
         image: ssprivateprod.azurecr.io/mi-extraction-service:prod-9b2a5d9
         enabled: true
@@ -62,9 +63,8 @@ spec:
           SFTP_ENABLED: false
           SFTP_REMOTE_HOST: 10.24.254.130
           SFTP_REMOTE_PORT: 22
-          SFTP_REMOTE_FOLDER: files/mi-platform-export/
+          SFTP_REMOTE_FOLDER: /files/mi-platform-export/
           SFTP_FORCECHECK: true
-          DUMMY: false
     global:
       subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
