--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -17,4 +17,4 @@ spec:
     global:
       environment: "dev"
       enableKeyVaults: true
-      tenantid: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      tenantId: 531ff96d-0ae9-462a-8d2d-bec7c0b42082
