--- a/k8s/environments/prod/cluster-00/mi/mi-staging-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-staging-service.yaml
@@ -29,6 +29,7 @@ spec:
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         MI_CLIENT_ID: ce15efbc-13a8-40ee-8812-334a7d041910
+        MAXLINESBUFFER: 500
       smoketests:
         image: ssprivateprod.azurecr.io/mi-staging-service:prod-d2ac116
         enabled: true
