--- a/k8s/environments/prod/cluster-00/mi/mi-staging-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-staging-service.yaml
@@ -23,12 +23,17 @@ spec:
       kind: CronJob
       schedule: '30 2 * * *'
       activeDeadlineSeconds: 82800 #23 hours
+      memoryRequests: '2048Mi'
+      cpuRequests: '200m'
+      memoryLimits: '4096Mi'
+      cpuLimits: '2000m'
       labels:
         app.kubernetes.io/instance: mi-staging-service
         app.kubernetes.io/name: mi-staging-service
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         MI_CLIENT_ID: ce15efbc-13a8-40ee-8812-334a7d041910
+        MAXLINESBUFFER: 500
       smoketests:
         image: ssprivateprod.azurecr.io/mi-staging-service:prod-d2ac116
         enabled: true
