fixing syntax issues

--- a/k8s/environments/dev/dev-helmrelease.yaml
+++ b/k8s/environments/dev/dev-helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: demo-helmrelease
+  name: dev-helmrelease
 spec:
   rollback:
     enable: true
