--- a/k8s/environments/dev/common-overlay/kustomization.yaml
+++ b/k8s/environments/dev/common-overlay/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - toffee
+  - video-hearings
 patches:
   - path: ../dev-helmrelease.yaml
     target:
