--- a/k8s/environments/prod/cluster-00/mi/mi-extraction-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-extraction-service.yaml
@@ -23,6 +23,10 @@ spec:
       kind: CronJob
       schedule: '0 3 * * *'
       activeDeadlineSeconds: 82800 #23 hours
+      memoryRequests: '2048Mi'
+      cpuRequests: '200m'
+      memoryLimits: '4096Mi'
+      cpuLimits: '2000m'
       labels:
         app.kubernetes.io/instance: mi-extraction-service
         app.kubernetes.io/name: mi-extraction-service
