--- a/k8s/namespaces/video-hearings/vh-user-api/vh-user-api.yaml
+++ b/k8s/namespaces/video-hearings/vh-user-api/vh-user-api.yaml
@@ -17,4 +17,4 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: false
-      image: sdshmctspublic.azurecr.io/vh/vh-user-api:latest
+      image: sdshmctspublic.azurecr.io/vh/user-api:latest
