--- a/k8s/environments/dev/dev-helmrelease.yaml
+++ b/k8s/environments/dev/dev-helmrelease.yaml
@@ -8,6 +8,6 @@ spec:
     retry: true
   values:
     global:
-      environment: dev
+      environment: "dev"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
