--- a/k8s/environments/dev/common-overlay/flux-patch.yaml
+++ b/k8s/environments/dev/common-overlay/flux-patch.yaml
@@ -1,1 +1,10 @@
 ---
+apiVersion: helm.fluxcd.io/v1
+kind: HelmRelease
+metadata:
+  name: toffee-recipe-backend
+  namespace: toffee
+spec:
+  values:
+    global:
+      environment: dev
