--- a/k8s/namespaces/video-hearings/vh-user-api/vh-user-api.yaml
+++ b/k8s/namespaces/video-hearings/vh-user-api/vh-user-api.yaml
@@ -18,4 +18,63 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: false
       image: sdshmctspublic.azurecr.io/vh/user-api:latest
-
+      applicationPort: 80
+      ingressHost: vh-user-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+      releaseNameOverride: vh-user-api
+      aadIdentityName: vh
+      keyVaults:
+        vhinfracorehtdev:
+          excludeEnvironmentSuffix: false
+          resourceGroup: vh-infra-core-{{ .Values.global.environment }}
+          usePodIdentity: true
+          secrets:
+            - vh-user-api-key
+            - vh-user-api-appid
+            - vh-user-api-identifieruris
+            - vh-infra-core-AppInsightsKey
+            - defaultpassword
+            - redis-connection-str
+            - testdefaultpassword
+      environment:
+        ADGROUP__ADMINISTRATOR: VirtualRoomAdministrator
+        ADGROUP__CASETYPE: CaseType
+        ADGROUP__EXTERNAL: External
+        ADGROUP__JUDGE: VirtualRoomJudge
+        ADGROUP__JUDGESTESTGROUP: TestAccount
+        ADGROUP__PROFESSIONALUSER: VirtualRoomProfessionalUser
+        APPINSIGHTS_PROFILERFEATURE_VERSION: disabled
+        APPINSIGHTS_SNAPSHOTFEATURE_VERSION: disabled
+        APPLICATIONINSIGHTS_INSTRUMENTATIONKEY: $(APPLICATIONINSIGHTS_INSTRUMENTATIONKEY)
+        ## APPLICATIONINSIGHTS_CONNECTION_STRING: InstrumentationKey=<azure-secret:vh-infra-core-AppInsightsKey>
+        APPLICATIONINSIGHTSAGENT_EXTENSION_VERSION: ~2
+        AZUREAD__CLIENTSECRET: $(AZUREAD__CLIENTSECRET)
+        AZUREAD__CLIENTID: $(AZUREAD__CLIENTID)
+        AZUREAD__TENANTID: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+        AZUREAD__VHUSERAPIRESOURCEID: $(AZUREAD__VHUSERAPIRESOURCEID)
+        CONNECTIONSTRINGS__REDISCACHE: $(CONNECTIONSTRINGS__REDISCACHE)
+        DEFAULTPASSWORD: $(DEFAULTPASSWORD)
+        DIAGNOSTICSERVICES_EXTENSION_VERSION: disabled
+        DISABLEHTTPSREDIRECTION: true
+        INSTRUMENTATIONENGINE_EXTENSION_VERSION: disabled
+        ISLIVE: false
+        MSDEPLOY_RENAME_LOCKED_FILES: 1
+        REFORMEMAIL: hearings.reform.hmcts.net
+        SNAPSHOTDEBUGGER_EXTENSION_VERSION: disabled
+        TESTDEFAULTPASSWORD: $(TESTDEFAULTPASSWORD)
+        TESTING__EXISTINGEMAIL: UserApiTestUser@a.com
+        TESTING__EXISTINGGROUPS__0__DISPLAYNAME: External
+        TESTING__EXISTINGGROUPS__0__GROUPID: 121fa058-1796-4531-a9ee-63be1d4dc630
+        TESTING__EXISTINGGROUPS__1__DISPLAYNAME: UserApiTestGroup
+        TESTING__EXISTINGGROUPS__1__GROUPID: 371ac75b-22b1-48d8-a3d8-f0587604d01f
+        TESTING__EXISTINGUSERDISPLAYNAME: User Api Test User
+        TESTING__EXISTINGUSERFIRSTNAME: User
+        TESTING__EXISTINGUSERID: 948cb183-00cf-4251-8b13-6c39a1b0c25d
+        TESTING__EXISTINGUSERLASTNAME: Api
+        TESTING__EXISTINGUSERPRINCIPAL: UserApiTestUser@hearings.reform.hmcts.net
+        TESTING__NEWGROUPS__0__DISPLAYNAME: NewUserApiTestGroup
+        TESTING__NEWGROUPS__0__GROUPID: 7d62cf17-c548-4a69-8f8f-4bc7fee90fbe
+        VHSERVICES__USERAPIRESOURCEID: https://vh-user-api-{{ .Values.global.environment }}.azurewebsites.net
+        VHSERVICES__USERAPIURL: https://vh-user-api-{{ .Values.global.environment }}-staging.azurewebsites.net/
+        XDT_MICROSOFTAPPLICATIONINSIGHTS_BASEEXTENSIONS: disabled
+        XDT_MICROSOFTAPPLICATIONINSIGHTS_MODE: default
+        ZAPCONFIGURATION__BUILDCONFIGMODE: Release
