--- a/k8s/environments/dev/common-overlay/video-hearings/kustomization.yaml
+++ b/k8s/environments/dev/common-overlay/video-hearings/kustomization.yaml
@@ -2,11 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../../../namespaces/video-hearings
-
-patches:
-- target:
-    group: aadpodidentity.k8s.io
-    version: v1
-    kind: AzureIdentity
-    name: toffee
-  path: azure-identity-patch.yaml
+- vh-user-api-identity.yaml
