--- a/k8s/environments/dev/common-overlay/video-hearings/vh-user-api-identity.yaml
+++ b/k8s/environments/dev/common-overlay/video-hearings/vh-user-api-identity.yaml
@@ -1,7 +1,7 @@
 apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentity
 metadata:
- name: vh-user-api
+ name: vh-aad-identity
  namespace: vh
 spec:
   type: 0
@@ -12,8 +12,8 @@ spec:
 apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentityBinding
 metadata:
- name: vh-user-api
+ name: vh-aad-identity
  namespace: vh
 spec:
- azureIdentity: vh-user-api
- selector: vh-user-api
+ azureIdentity: vh-aad-identity
+ selector: vh-aad-identity
