--- a/k8s/environments/sbox/common-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/kustomization.yaml
@@ -2,3 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - toffee
+- video-hearings
+patches:
+- path: ../sbox-helmrelease.yaml
+  target:
+    kind: HelmRelease
