--- a/k8s/namespaces/video-hearings/vh-user-api/vh-testing.yaml
+++ b/k8s/namespaces/video-hearings/vh-user-api/vh-testing.yaml
@@ -18,6 +18,7 @@ spec:
       replicas: 1
       useInterpodAntiAffinity: false
       image: sdshmctspublic.azurecr.io/vh/bash:latest
+      applicationPort: 80
 
 
 
